--- a/src/assets/css/Book.css
+++ b/src/assets/css/Book.css
@@ -1,23 +1,49 @@
 .book{
-    width: 20%;
-    height: 200px;
+    padding: 0% 0.5% 0.5% 0.5%;
     margin: 1%;
+    transition: 0.1s;
+    border-radius: 2%;
+    background: white;
+}
+.book:hover{
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.19)
+}
+.book_info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .image_book{
     width: 100%;
+    margin-top: 5px;
 }
-
-
+.origin_price{
+    color: #7F7F7F;
+}
+.price{
+    
+    font-size: 17px;
+    color: #242424;
+}
 
 .discount{
-    font-size: 10px;
+    position: absolute;
+    padding: 0.5%;
+    font-size: 80%;
+    color:#F3F7F7;
+    background-color: #FF4E58 ;
+    border: tomato;
+    width: 15%;
+    height: 9%;
+    text-align: center;
+    border-radius: 0% 0% 250% 250%;
 }
 
-.favorite{
-    background-color: pink;
+.favorite_icon{
+    background-color: red;
 }
 
 .save_button{
-    float: right;
+    background-color: transparent;
 }
