--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -78,3 +78,31 @@
   margin: 0 auto;
   width: 400px;
 }
+
+.user-bar{
+  background: blue;
+  display: flex;
+  justify-content: space-between;
+}
+.category{
+  margin-bottom: 10px;
+  margin-top: 10px;
+    color: rgb(51, 51, 51);
+    font-size: 18px;
+    font-weight: 400;
+}
+.stack-book{
+  padding:10px;
+  background: white;
+}
+.btn-load{
+  margin-top: 20px;
+  display: block;
+   width: 13%;
+  margin: 0 auto;
+}
+.action{
+  display:"flex";
+  justify-content: space-between;
+  flex-direction: row;
+}
