Add some logic at Admin

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -107,3 +107,7 @@ height: 100%;
   justify-content: space-between;
   flex-direction: row;
 }
+
+.ant-form-item-label{
+  overflow: auto !important;
+}
